@@ -21,6 +21,9 @@ Cahiers de textes 2:
 AID:
 - Possibilité de désigner comme "professeur" un compte scolarité ou cpe.
 
+Épreuves blanches:
+- Possibilité d'exporter les notes en CSV sur un autre référentiel que 20.
+
 Bibliothèques:
 - Mise à jour de TinyButStrong en version 3.11.0 (PHP 5 and 7) (2019-02-10)
 - Mise à jour du plugin openTBS de TinyButStrong en version 1.9.12 (2019-03-10)
